<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/layout_plant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/plant_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/plant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_pic"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/common_side_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_side_margin"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plant_eng_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plant_also_known_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_eng_title"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@string/plant_other_name"
                android:textSize="@dimen/common_text_size" />

            <TextView
                android:id="@+id/plant_brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_also_known_name"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@string/plant_brief"
                android:textSize="@dimen/common_text_size" />

            <TextView
                android:id="@+id/plant_feature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_brief"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@string/plant_feature" />

            <TextView
                android:id="@+id/plant_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_feature"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@string/plant_function"
                android:textSize="@dimen/common_text_size" />


            <TextView
                android:id="@+id/plant_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/plant_function"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@string/plant_update_date"
                android:textSize="@dimen/common_text_size" />
        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/tool_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>

